external-crates/move/crates/move-compiler/tests/move_2024/typing/signed_int_abort_error.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E04035]: invalid constant usage in error context
  ┌─ tests/move_2024/typing/signed_int_abort_error.move:7:15
  │
7 │         abort 1i64
  │               ^^^^
  │               │
  │               Invalid error code for abort, expected a u64 or constant declared with '#[error]' annotation
  │               If you want to use a non-u64 as an abort code, you must use a '#[error]' attribute on a constant
  │
  = Non-u64 constants can only be used as error codes if the '#[error]' attribute is added to them.

error[E04035]: invalid constant usage in error context
   ┌─ tests/move_2024/typing/signed_int_abort_error.move:12:15
   │
12 │         abort code
   │               ^^^^
   │               │
   │               Invalid error code for abort, expected a u64 or constant declared with '#[error]' annotation
   │               If you want to use a non-u64 as an abort code, you must use a '#[error]' attribute on a constant
   │
   = Non-u64 constants can only be used as error codes if the '#[error]' attribute is added to them.
